unpackaged/config/post/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>cUnite_Age__c</fullName>
        <formula>IF(ISNULL(cUnite_Birthdate__c),null,FLOOR((TODAY()-cUnite_Birthdate__c +1)/365.2425))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cUnite_Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cUnite_Electronic_Signature_Date__c</fullName>
        <label>Electronic Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cUnite_Electronic_Signature__c</fullName>
        <label>Electronic Signature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cUnite_Relationship__c</fullName>
        <description>The relationship field is used with the electronic signature fields. When an applicant is under 18, a parent/guardian must complete the waiver. The relationship is how the signer is related to the applicant.</description>
        <label>Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>